--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,73 @@
-.App {
-    text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap");
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.CreateBook {
-    background-color: #2c3e50;
-    min-height: 100vh;
-    color: white;
-}
-
-.ShowBookDetails {
-    background-color: #2c3e50;
-    min-height: 100vh;
-    color: white;
-}
-
-.UpdateBookInfo {
-    background-color: #2c3e50;
-    min-height: 100vh;
-    color: white;
-}
-
-.ShowBookList {
-    background-color: #2c3e50;
-    height: 100%;
+img {
     width: 100%;
-    min-height: 100vh;
-    min-width: 100px;
-    color: white;
+    border-radius: 12px;
+    height: 214px;
+    object-fit: cover;  /* prevents distortion / cut image */
 }
 
-
-/* BookList Styles */
-.list {
-    display: grid;
-    margin: 20px 0 50px 0;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 1fr;
-    grid-gap: 2em;
+body {
+    background-color: #eaeff1;
+    font-family: "Raleway", sans-serif;
 }
 
-.card-container {
-    width: 250px;
-    border: 1px solid rgba(0,0,.125);
-    margin: 0 auto;
-    border-radius: 5px;
-    overflow: hidden;
+#container {
+    max-width: 300px;
+    margin: 0 auto;  /* Center the container in middle on horizontal axis */
+    margin-top: 20vh;  /* Add empty space above the container (20% of the view height) */
 }
 
-.desc {
-    height: 130px;
-    padding: 10px;
+.card {
+    background-color: white;  /* Change background color */
+    border: 1px solid #bacdd8;  /* Add border */
+    padding: 8px;  /* Add space between the border and the content */
+    border-radius: 12px;  
 }
 
-.desc h2 {
-    font-size: 1em;
-    font-weight: 400;
+/* Style div elements that have class equal to tag */
+.tag {
+    padding: 4px 8px;
+    border: 1px solid #e5eaed;
+    border-radius: 50px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #788697;
+}
+  
+/* Style div elements that have class equal to name */
+.name {
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 16px;
+}
+  
+/* Style p element */
+p {
+    font-size: 14px;
+    color: #7f8c9b;
+    line-height: 150%;
+}
+  
+/* Style button element */
+button {
+    border: none;
+    padding: 12px 24px;
+    border-radius: 50px;
+    font-weight: 600;
+    color: #0077ff;
+    background-color: #e0efff;
+    margin: 0 auto;  /* Button is inline-block element by default, it need to have block display for margin: 0 auto; to work */
+    display: block;
+    cursor: pointer;  /* Button is a clickable element, therefore it should have a pointer cursor */
+}
+  
+.card__details {
+    padding: 16px 8px 8px 8px;  /* Add space around the details */
 }
 
-.desc h3, p {
-    font-weight: 300;
-}
-
-.desc h3 {
-    color: #6c757d;
-    font-size: 1em;
-    padding: 10px 0 10px 0;
+/* Add style when button is focused or hovered */
+button:focus, button:hover {
+    background-color: #0077ff;
+    color: #e0efff;
 }
