--- a/src/components/body/Product.css
+++ b/src/components/body/Product.css
@@ -1,18 +1,83 @@
 .productCards {
-    display: block;
     text-align: left;
-    /* align-items: left;
-    justify-content: left; */
+    /* display: block; */
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .card {
     display: inline-block;
     width: 50%;
     text-align: center;
+    /* padding: 10px; */
 }
 
 .card-inner {
-    margin: 3px;
-    /* padding: 3px; */
+    height: 222px;
+    display: flex;
+    margin: 10px;
+    /* padding: 20px; */
     border: 1px solid black;
+}
+
+.card-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-right-top,
+.card-right-btm {
+    text-align: left;
+}
+
+.card-right-top > h3 {
+    margin: 0 0 10px;
+    /* font-weight: normal; /* unbold headers /*     */
+}
+
+.card-right-top > div {
+    display: -webkit-box;
+    /* -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: pre-wrap;;
+    text-overflow: ellipsis;
+    height: 40px; */
+}
+
+.card-right-btm > h3 {
+    margin: 0px;
+    padding: 15px 0 15px 0;
+}
+
+.card-inner > div {
+    padding: 10px;
+}
+
+.card-inner > div:first-child {
+    width: 40%;
+    border-right: 1px solid black;
+}
+
+.card-left > img {
+    max-width: 200px;
+    max-height: 200px;
+}
+
+button {
+    min-width: 110px;
+    padding: 10px;
+    background-color: rgb(255, 197, 0);
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: rgb(205, 167, 0);
+    cursor: pointer;
+}
+
+button > h4 {
+    margin: 0px;
 }
