--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,19 @@
     font-size: 1em;
     padding: 10px 0 10px 0;
 }
+
+.form {
+    margin: auto;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.form > div {
+    text-align: right;
+    margin-bottom: 10px;
+}
+
+button {
+    width: 170px;
+}
